[package]
name = "demonator"
version = "0.1.0"
edition = "2021"
description = "Typewriter-style text display for terminal demos"
license = "Apache-2.0"
repository = "https://github.com/always-further/demonator"
homepage = "https://github.com/always-further/demonator"
documentation = "https://docs.rs/demonator"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[profile.release]
strip = true
lto = true
